@@ -127,6 +127,7 @@ TIMEPIX     = 22
 FLI         = 23
 PIMAX       = 24
 ANDOR3D     = 25
+JUNGFRAU    = 26
 
 #XAMPS    # N/A data
 #FEXAMP   # N/A data
@@ -139,13 +140,13 @@ ANDOR3D     = 25
 list_of_det_type = (UNDEFINED, CSPAD, CSPAD2X2, PRINCETON, PNCCD, TM6740, \
                     OPAL1000, OPAL2000, OPAL4000, OPAL8000, \
                     ORCAFL40, EPIX, EPIX10K, EPIX100A, FCCD960, ANDOR, ACQIRIS, IMP, QUARTZ4A150, RAYONIX,
-                    EVR, FCCD, TIMEPIX, FLI, PIMAX, ANDOR3D)
+                    EVR, FCCD, TIMEPIX, FLI, PIMAX, ANDOR3D, JUNGFRAU)
 """ List of enumetated detector types"""
 
 list_of_det_names = ('UNDEFINED', 'Cspad', 'Cspad2x2', 'Princeton', 'pnCCD', 'Tm6740', \
                      'Opal1000', 'Opal2000', 'Opal4000', 'Opal8000', \
                      'OrcaFl40', 'Epix', 'Epix10k', 'Epix100a', 'Fccd960', 'Andor', 'Acqiris', 'Imp', 'Quartz4A150', 'Rayonix',\
-                     'Evr', 'Fccd', 'Timepix', 'Fli', 'Pimax', 'Andor3d')
+                     'Evr', 'Fccd', 'Timepix', 'Fli', 'Pimax', 'Andor3d', 'Jungfrau')
 """ List of enumetated detector names"""
 
 list_of_calib_groups = ('UNDEFINED',
@@ -173,7 +174,8 @@ list_of_calib_groups = ('UNDEFINED',
                         'Timepix::CalibV1',
                         'Fli::CalibV1',
                         'Pimax::CalibV1',
-                        'Andor3d::CalibV1'
+                        'Andor3d::CalibV1',
+                        'Jungfrau::CalibV1'
                         )
 """ List of enumetated detector calibration groups"""
 
@@ -280,6 +282,7 @@ def det_type_from_source(source) :
     elif ':Fli.'         in str_src : return FLI
     elif ':Pimax.'       in str_src : return PIMAX
     elif ':DualAndor.'   in str_src : return ANDOR3D
+    elif ':Jungfrau.'    in str_src : return JUNGFRAU
     else                            : return UNDEFINED
 
 #------------------------------
